--- a/ikkeInsjekket.html
+++ b/ikkeInsjekket.html
@@ -34,15 +34,22 @@
 
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyDtx8J7NBELBdhWrPgiFyWrOtiMSYerJbo",
-            authDomain: "test-b24b1.firebaseapp.com",
-            databaseURL: "https://test-b24b1-default-rtdb.firebaseio.com", // URL for Realtime Database
-            projectId: "test-b24b1",
-            storageBucket: "test-b24b1.appspot.com",
-            messagingSenderId: "1058078158269",
-            appId: "1:1058078158269:web:10ac5b50c413295e3636d4",
-            measurementId: "G-1CWRF1Z6BQ"
-        };
+ 
+ apiKey: "AIzaSyDrovSRv-f6fFokdBEfwvNMZTqG1qYoU_s",
+
+ authDomain: "russedaap-f7190.firebaseapp.com",
+
+ databaseURL: "https://russedaap-f7190-default-rtdb.europe-west1.firebasedatabase.app",
+
+ projectId: "russedaap-f7190",
+
+ storageBucket: "russedaap-f7190.firebasestorage.app",
+
+ messagingSenderId: "850359212980",
+
+ appId: "1:850359212980:web:bbc08be108efe1d655f0e1"
+
+};
 
         firebase.initializeApp(firebaseConfig);
         const database = firebase.database(); // Referanse til Realtime Database
